# Web_Demo

./: .gitignore  DEPLOYMENT-SUMMARY.md  Docker-README.md  INTEGRATED-DEPLOY.md  README.md  SEPARATE-DEPLOY.md  all-serve.md  backend-deployment.md  frontend_setup.md
backend/: CMakeLists.txt  dependencies.md  vcpkg.json
backend/include/: http_server.h  user_service.h
backend/src/: http_server.cpp  main.cpp  user_service.cpp
docker_all/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  env-template  nginx.conf.template
frontend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: userApi.ts
frontend/src/components/: AddUserForm.tsx  UserList.tsx
frontend/src/config/: api.ts  environment.ts
nginx/: default.conf
scripts/: all-server.sh  deploy-frontend.sh  deploy-simple.sh  docker-deploy.sh
shared/: types.ts
